call to action completed & responsive/z-index on header fixed

--- a/style/_header.scss
+++ b/style/_header.scss
@@ -29,6 +29,7 @@
             background-size: 100%;
             background-position: 0 100%;
             height: 100vh;
+            z-index: 2;
             
             a {
                 text-decoration: none;
