--- a/style/style.css
+++ b/style/style.css
@@ -66,6 +66,7 @@ img {
     background-size: 100%;
     background-position: 0 100%;
     height: 100vh;
+    z-index: 2;
   }
   nav .nav-ul a {
     text-decoration: none;
@@ -410,6 +411,90 @@ img {
   .subsection p {
     font-size: 1.1rem;
     width: 80%;
+  }
+}
+
+.call_to_action {
+  padding: 1.5rem;
+}
+
+.call_to_action section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  gap: 2rem;
+  background: #2d2640;
+  padding: 3rem 1rem;
+  position: relative;
+}
+
+.call_to_action section h2 {
+  font-size: 2rem;
+  color: #fff;
+  font-weight: 400;
+  z-index: 1;
+}
+
+.call_to_action section button {
+  border: .1rem solid #fff;
+  background: transparent;
+  color: #fff;
+  font-weight: 700;
+  padding: .5rem 1rem;
+}
+
+.call_to_action section .work_desktop {
+  display: none;
+}
+
+.call_to_action section .work_mobile {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+}
+
+@media screen and (min-width: 1024px) {
+  .call_to_action {
+    padding: 2rem 8rem;
+  }
+  .call_to_action section {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    text-align: start;
+    padding: 4rem 5rem;
+  }
+  .call_to_action section h2 {
+    font-size: 2.75rem;
+  }
+  .call_to_action section .work_mobile {
+    display: none;
+  }
+  .call_to_action section .work_desktop {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  h2 {
+    width: 50%;
   }
 }
 /*# sourceMappingURL=style.css.map */
